# ADES-Master

./: .gitignore  Makefile  README  README.txt  environment.yml  pyproject.toml  setup.py
C/: Makefile.config.in  README  aclocal.m4  config.status  configure  configure.ac  forMacOSXwithout_pkg_config
C/include/: ades.h  adestables.h  adesxmltools.h  psvtools.h
C/src/: .swp  Makefile  adestables.cpp  adesxmltools.c  oldvalades.c  psvtools.cpp  psvtoxml.c  readxmlc.c  testthings2.cpp  unittest.c  valades.c  valall.c  valgeneral.c  valsubmit.c  writexml.cpp  writexmlc.c  xmltopsv.c
Fortran/: Makefile  README  readxmlfox.f90  writexmlfox.f90
Python/: requirements.txt  test-requirements.txt
attic/: ADES_Description_12Mar2024.docx  ADES_Description_v01Sep2022.docx  ADES_Description_v07Sep2022_ChangeTracking.docx  ADES_Description_v17Jan2024.docx  ADES_Description_v25Apr2022.docx  ADES_Description_v26Oct2023.docx
doc/: ADES_Description_02May2024.docx  ADES_Description_18Jan2024.docx  ADES_Description_24Apr2024.docx  ADES_Description_29Jul2025.docx  ADES_Description_v03Feb2022.docx  ADES_Description_v07Sep2022.docx  ADES_Description_v25Oct2023.docx  ADES_Description_vXXX.docx  README.docs  ades.ps  progDecoder.txt
main/: adesmaster.xml  badsubmit.xml  distribhumanxsd.xslt  distribxsd.xslt  docelementstable.xslt  docgrouptypestable.xslt  docsimpletypestable.xslt  generalhumanxsd.xslt  generalxsd.xslt  newsubmit.xml  submithumanxsd.xslt  submitxsd.xslt  valall.py  validate.py  valit.py  xit.py
new_tests/: test_json2xml.py  test_jsontoxml.py  test_mpc80coltoxml.py  test_occultations.py  test_packUtil.py  test_piping.py  test_programCodesArray.py  test_psvtoxml.py  test_readxml.py  test_validation.py  test_validationResiduals.py  test_xml2json.py  test_xmltojson.py  test_xmltompc80col.py  test_xmltopsv.py
tests/: README  prog_python3  runtests  test_ades.py  test_jsontoxml.py  test_piping.py  test_programCodesArray.py  test_validationResiduals.py  test_xmltojson.py  test_xmltompc80col.py  testmakechecks  valall.file  valgeneral.file  validate.file  validation.file
tex/: ades.ps  ades.tex  elementstable.tex  grouptypestable.tex  maketexdoc  maketexfiles  simpletypestable.tex
web/: .dockerignore  Dockerfile  README.md  app.py  build.sh  docker-compose.yml  requirements.txt
xml/: adesmaster.xml
xsd/: distrib.xsd  distribhuman.xsd  (+5 more)
(+271 files in other folders)
