[project]
name = "ADES"
version = "0.0.1"
dependencies = [
    "lxml",
    "xmltodict",
    "pyyaml"
]
readme = "README.txt"

[project.scripts]
"jsontoxml.py" = "ades.jsontoxml:main"
"mpc80coltoxml.py" = "ades.mpc80coltoxml:main"
"psvtoxml.py" = "ades.psvtoxml:main"
"readxmlpy.py" = "ades.readxmlpy:main"
"valades.py" = "ades.valades:main"
"valall.py" = "ades.valall:main"
"valgeneral.py" = "ades.valgeneral:main"
"validate.py" = "ades.validate:main"
"valsubmit.py" = "ades.valsubmit:main"
"xmltojson.py" = "ades.xmltojson:main"
"xmltompc80col.py" = "ades.xmltompc80col:main"
"xmltopsv.py" = "ades.xmltopsv:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
ades = "Python/bin"

[tool.setuptools.package-data]
ades = ["data/xml/*.xml", "data/xsd/*.xsd", "data/xslt/*/*.xslt"]