AC_INIT([ADES], [0.2], [hockney@jpl.nasa.gov])
PKG_CHECK_MODULES([LIBXML2], [libxml-2.0])
PKG_CHECK_MODULES([LIBXSLT], [libxslt])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_MKDIR_P
AC_PATH_PROG(CP,cp)
AC_PATH_PROG(RM,rm)
AC_PATH_PROG(MV,mv)
AC_PATH_PROG(LN,ln)
#AC_PREFIX_DEFAULT(`pwd`/build)
AC_PREFIX_DEFAULT(`pwd`)
AC_CONFIG_FILES([
 Makefile.config
])
AC_OUTPUT
